Multiple grid/spacing UI fixes on account/avatar templates

--- a/network/static/css/app.css
+++ b/network/static/css/app.css
@@ -100,6 +100,15 @@ a:hover {
     text-align: center;
 }
 
+.form-group {
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
+.bottom-details {
+    margin-top: 10px;
+}
+
 .img-avatar {
     border: 2px solid white;
     border-radius: 50px;
@@ -107,6 +116,10 @@ a:hover {
     margin: 0 auto;
     margin-top: -7px;
     margin-right: 5px;
+}
+
+.form-avatar {
+    margin-bottom: 10px;
 }
 
 .progress {
